--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@types/react-dom": "^19.1.9",
     "eslint": "latest",
     "eslint-config-next": "latest",
-    "typescript": "latest"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5"
   }
 }
