--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "tailwindcss": "latest"
   },
   "devDependencies": {
-    "@types/node": "latest",
-    "@types/react": "^19.1.13",
-    "@types/react-dom": "^19.1.9",
-    "eslint": "latest",
-    "eslint-config-next": "latest",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.30",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
