--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "antd": "^5.26.7",
+    "aos": "^2.3.4",
     "autoprefixer": "latest",
     "next": "latest",
     "postcss": "latest",
-    "react-icons": "^5.5.0",
-    "antd": "^5.26.7",
     "react": "latest",
     "react-dom": "latest",
+    "react-icons": "^5.5.0",
     "tailwindcss": "latest"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
